// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`psql_crosstab.sql > line 6 1`] = `
[
  "VALUES
   ('v1','h2','foo', 3, '2015-04-01'::date),
   ('v2','h1','bar', 3, '2015-01-02'),
   ('v1','h0','baz', NULL, '2015-07-12'),
   ('v0','h4','qux', 4, '2015-07-15'),
   ('v0','h4','dbl', -3, '2014-12-15'),
   ('v0',NULL,'qux', 5, '2014-07-15'),
   ('v1','h2','quux',7, '2015-04-04')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "valuesLists": [
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 11,
                        "sval": {
                          "sval": "v1",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 16,
                        "sval": {
                          "sval": "h2",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 21,
                        "sval": {
                          "sval": "foo",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 3,
                        },
                        "location": 28,
                      },
                    },
                    {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 31,
                            "sval": {
                              "sval": "2015-04-01",
                            },
                          },
                        },
                        "location": 43,
                        "typeName": {
                          "location": 45,
                          "names": [
                            {
                              "String": {
                                "sval": "date",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 56,
                        "sval": {
                          "sval": "v2",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 61,
                        "sval": {
                          "sval": "h1",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 66,
                        "sval": {
                          "sval": "bar",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 3,
                        },
                        "location": 73,
                      },
                    },
                    {
                      "A_Const": {
                        "location": 76,
                        "sval": {
                          "sval": "2015-01-02",
                        },
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 95,
                        "sval": {
                          "sval": "v1",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 100,
                        "sval": {
                          "sval": "h0",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 105,
                        "sval": {
                          "sval": "baz",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "isnull": true,
                        "location": 112,
                      },
                    },
                    {
                      "A_Const": {
                        "location": 118,
                        "sval": {
                          "sval": "2015-07-12",
                        },
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 137,
                        "sval": {
                          "sval": "v0",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 142,
                        "sval": {
                          "sval": "h4",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 147,
                        "sval": {
                          "sval": "qux",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 4,
                        },
                        "location": 154,
                      },
                    },
                    {
                      "A_Const": {
                        "location": 157,
                        "sval": {
                          "sval": "2015-07-15",
                        },
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 176,
                        "sval": {
                          "sval": "v0",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 181,
                        "sval": {
                          "sval": "h4",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 186,
                        "sval": {
                          "sval": "dbl",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "ival": {},
                        "location": 193,
                      },
                    },
                    {
                      "A_Const": {
                        "location": 197,
                        "sval": {
                          "sval": "2014-12-15",
                        },
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 216,
                        "sval": {
                          "sval": "v0",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "isnull": true,
                        "location": 221,
                      },
                    },
                    {
                      "A_Const": {
                        "location": 226,
                        "sval": {
                          "sval": "qux",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 5,
                        },
                        "location": 233,
                      },
                    },
                    {
                      "A_Const": {
                        "location": 236,
                        "sval": {
                          "sval": "2014-07-15",
                        },
                      },
                    },
                  ],
                },
              },
              {
                "List": {
                  "items": [
                    {
                      "A_Const": {
                        "location": 255,
                        "sval": {
                          "sval": "v1",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 260,
                        "sval": {
                          "sval": "h2",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "location": 265,
                        "sval": {
                          "sval": "quux",
                        },
                      },
                    },
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 7,
                        },
                        "location": 272,
                      },
                    },
                    {
                      "A_Const": {
                        "location": 275,
                        "sval": {
                          "sval": "2015-04-04",
                        },
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`psql_crosstab.sql > line 16 1`] = `
[
  "ANALYZE ctv_data",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 8,
                    "relname": "ctv_data",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`psql_crosstab.sql > line 19 1`] = `
[
  "SELECT v, EXTRACT(year FROM d), count(*)
 FROM ctv_data
 GROUP BY 1, 2
 ORDER BY 1, 2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 47,
                  "relname": "ctv_data",
                  "relpersistence": "p",
                },
              },
            ],
            "groupClause": [
              {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 66,
                },
              },
              {
                "A_Const": {
                  "ival": {
                    "ival": 2,
                  },
                  "location": 69,
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 81,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 2,
                      },
                      "location": 84,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "v",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 18,
                            "sval": {
                              "sval": "year",
                            },
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "d",
                                },
                              },
                            ],
                            "location": 28,
                          },
                        },
                      ],
                      "funcformat": "COERCE_SQL_SYNTAX",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "extract",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 32,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 32,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`psql_crosstab.sql > line 116 1`] = `
[
  "CREATE TABLE ctv_data (x int, y int, v text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "ctv_data",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "x",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "y",
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 32,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "v",
                  "is_local": true,
                  "location": 37,
                  "typeName": {
                    "location": 39,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`psql_crosstab.sql > line 118 1`] = `
[
  "INSERT INTO ctv_data SELECT 1, x, '*' || x FROM generate_series(1,10) x",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "ctv_data",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "x",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 64,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 10,
                                        },
                                        "location": 66,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 48,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 28,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 28,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 31,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "x",
                              },
                            },
                          ],
                          "location": 31,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 34,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Const": {
                              "location": 34,
                              "sval": {
                                "sval": "*",
                              },
                            },
                          },
                          "location": 38,
                          "name": [
                            {
                              "String": {
                                "sval": "||",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "x",
                                  },
                                },
                              ],
                              "location": 41,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
